# fraud_prevention_mage

./: .gitignore  LICENSE  README.md  docker-compose.yml
data_synthesizer/: .dockerignore  Dockerfile  create_synthetizer.py  docker_build.sh  main.py  pyproject.toml  run.sh
data_synthesizer/api/routers/: stream.py
data_synthesizer/artifacts/: creditcard_fraud_gc.pkl  creditcard_fraud_stats.json
data_synthesizer/core/: settings.py
data_synthesizer/models/: schemas.py
data_synthesizer/original_data/: about_data.md
data_synthesizer/services/: kafka.py  sampling.py  sdv_loader.py  streamer.py
fraud_prevention_pipeline/: Dockerfile  main.py  metadata.yaml  pyproject.toml
fraud_prevention_pipeline/data_exporters/: uncharted_maple.py
fraud_prevention_pipeline/data_loaders/: creditcard_transactions_loader.yaml  fraud_stream_loader.yaml
fraud_prevention_pipeline/ml_artifacts/: catboost_fraud.cbm
fraud_prevention_pipeline/pipelines/fraud_stream_pipeline/: metadata.yaml  triggers.yaml
fraud_prevention_pipeline/transformers/: compute_fraud_risk_score.py  data_cleaner.py
kafka_stream/: docker-compose.yml  start_kafka.sh
ml_and_experimentation/: main.py  pyproject.toml
ml_and_experimentation/notebooks/: fastapi_prototype.ipynb  fraud_risk_ml.ipynb  sdv_test.ipynb
ml_and_experimentation/notebooks/artifacts/: creditcard_fraud_gc.pkl  creditcard_fraud_metadata.json
risk_viewer/: Dockerfile  app.py  main.py  pyproject.toml
