[project]
name = "data-synthesizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi[standard]>=0.120.4",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "sdv>=1.28.0",
    "uvicorn>=0.38.0",
]
